--- a/HighSchoolFish/View/CommentCollectionViewCell.xib
+++ b/HighSchoolFish/View/CommentCollectionViewCell.xib
@@ -14,39 +14,40 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CommentCell" id="Plt-ez-mrg" customClass="CommentCollectionViewCell" customModule="HighSchoolFish" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="406" height="102"/>
+            <rect key="frame" x="0.0" y="0.0" width="446" height="261"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="406" height="102"/>
+                <rect key="frame" x="0.0" y="0.0" width="446" height="261"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vLl-Dn-R5g">
-                        <rect key="frame" x="0.0" y="0.0" width="406" height="102"/>
+                        <rect key="frame" x="0.0" y="0.0" width="446" height="261"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="piZ-O2-UI4">
                                 <rect key="frame" x="40" y="16" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="piZ-O2-UI4" secondAttribute="height" multiplier="1:1" id="7b9-5k-fBF"/>
-                                    <constraint firstAttribute="height" constant="30" id="vqX-ba-4MA"/>
+                                    <constraint firstAttribute="height" constant="30" id="BdK-By-bKZ"/>
+                                    <constraint firstAttribute="width" constant="30" id="qKo-lV-Ky6"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국회는 헌법개정안이 공고된 날로부터 60일 이내에 의결하여야 하며, 국회의 의결은 블라블라블라블라" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGv-br-0wj">
-                                <rect key="frame" x="80" y="35.333333333333336" width="280" height="31.333333333333336"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OGv-br-0wj">
+                                <rect key="frame" x="80" y="36.000000000000007" width="310" height="77.666666666666686"/>
+                                <string key="text">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 달콤한 색감이 물들어 조금씩 정신을 차렸을 땐 알아볼 수도 없지가득찬 마음이동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0mi-oz-Hxn">
-                                <rect key="frame" x="80" y="16" width="310" height="14.333333333333336"/>
+                                <rect key="frame" x="80" y="16" width="361" height="15"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="icP-76-zIA">
-                                        <rect key="frame" x="39.333333333333329" y="2.3333333333333321" width="21" height="12"/>
+                                        <rect key="frame" x="39.333333333333329" y="1.6666666666666679" width="21" height="12"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <color key="textColor" name="gray"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQP-Ma-fLA">
-                                        <rect key="frame" x="0.0" y="0.0" width="34.333333333333336" height="14.333333333333334"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="34.333333333333336" height="15"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -54,17 +55,18 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="icP-76-zIA" secondAttribute="bottom" id="CZo-1e-IyM"/>
-                                    <constraint firstItem="icP-76-zIA" firstAttribute="leading" secondItem="jQP-Ma-fLA" secondAttribute="trailing" constant="5" id="HZn-2c-weL"/>
-                                    <constraint firstAttribute="bottom" secondItem="jQP-Ma-fLA" secondAttribute="bottom" id="NSk-5Z-O6t"/>
-                                    <constraint firstItem="jQP-Ma-fLA" firstAttribute="leading" secondItem="0mi-oz-Hxn" secondAttribute="leading" id="tFU-Mt-2Uf"/>
-                                    <constraint firstItem="jQP-Ma-fLA" firstAttribute="top" secondItem="0mi-oz-Hxn" secondAttribute="top" id="u3R-LQ-gsa"/>
+                                    <constraint firstItem="jQP-Ma-fLA" firstAttribute="top" secondItem="0mi-oz-Hxn" secondAttribute="top" id="7o3-Pq-DQn"/>
+                                    <constraint firstAttribute="bottom" secondItem="jQP-Ma-fLA" secondAttribute="bottom" id="GlO-bj-hfE"/>
+                                    <constraint firstAttribute="height" constant="15" id="VqZ-Mf-pzw"/>
+                                    <constraint firstItem="icP-76-zIA" firstAttribute="leading" secondItem="jQP-Ma-fLA" secondAttribute="trailing" constant="5" id="aKL-Zc-rAk"/>
+                                    <constraint firstItem="icP-76-zIA" firstAttribute="centerY" secondItem="0mi-oz-Hxn" secondAttribute="centerY" id="fF7-SO-Izg"/>
+                                    <constraint firstItem="jQP-Ma-fLA" firstAttribute="leading" secondItem="0mi-oz-Hxn" secondAttribute="leading" id="hLx-3G-nDP"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4O7-wi-GRA">
-                                <rect key="frame" x="80" y="71.666666666666671" width="45" height="20"/>
+                                <rect key="frame" x="80" y="118.66666666666669" width="45" height="20"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="kSx-6R-3nb"/>
+                                    <constraint firstAttribute="height" constant="20" id="QRV-g3-Liy"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -73,14 +75,10 @@
                                 </state>
                             </button>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YR0-Qo-UwA">
-                                <rect key="frame" x="360" y="35.333333333333336" width="30" height="29.666666666666664"/>
+                                <rect key="frame" x="400" y="36" width="30" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlp-sF-aCf">
-                                        <rect key="frame" x="5" y="0.0" width="20" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="Txh-6s-wDU"/>
-                                            <constraint firstAttribute="width" constant="20" id="gL8-I8-qVj"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="34.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="tintColor" name="gray"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -90,43 +88,43 @@
                                         </buttonConfiguration>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAG-hi-2ur">
-                                        <rect key="frame" x="4.3333333333333144" y="20" width="21.666666666666668" height="9.6666666666666643"/>
+                                        <rect key="frame" x="4.3333333333333144" y="34.333333333333329" width="21.666666666666668" height="9.6666666666666643"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                         <color key="textColor" name="gray"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="a3i-bb-e1f"/>
+                                    <constraint firstAttribute="width" constant="30" id="YqA-bF-J1b"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="0mi-oz-Hxn" secondAttribute="trailing" constant="16" id="48S-Jf-p3z"/>
-                            <constraint firstItem="piZ-O2-UI4" firstAttribute="top" secondItem="vLl-Dn-R5g" secondAttribute="top" constant="16" id="7Dd-r0-6Mw"/>
-                            <constraint firstItem="OGv-br-0wj" firstAttribute="top" secondItem="0mi-oz-Hxn" secondAttribute="bottom" constant="5" id="7qm-79-aeY"/>
-                            <constraint firstItem="0mi-oz-Hxn" firstAttribute="leading" secondItem="piZ-O2-UI4" secondAttribute="trailing" constant="10" id="ANG-gp-gHJ"/>
-                            <constraint firstItem="piZ-O2-UI4" firstAttribute="leading" secondItem="vLl-Dn-R5g" secondAttribute="leading" constant="40" id="BIs-aJ-ahi"/>
-                            <constraint firstItem="4O7-wi-GRA" firstAttribute="leading" secondItem="OGv-br-0wj" secondAttribute="leading" id="BlG-5I-pKc"/>
-                            <constraint firstItem="YR0-Qo-UwA" firstAttribute="leading" secondItem="OGv-br-0wj" secondAttribute="trailing" id="NkJ-la-Ml4"/>
-                            <constraint firstItem="0mi-oz-Hxn" firstAttribute="top" secondItem="vLl-Dn-R5g" secondAttribute="top" constant="16" id="RNk-Nj-Zqg"/>
-                            <constraint firstAttribute="trailing" secondItem="YR0-Qo-UwA" secondAttribute="trailing" constant="16" id="YKm-OD-f7V"/>
-                            <constraint firstItem="OGv-br-0wj" firstAttribute="leading" secondItem="0mi-oz-Hxn" secondAttribute="leading" id="cWb-Kb-hIp"/>
-                            <constraint firstItem="4O7-wi-GRA" firstAttribute="top" secondItem="OGv-br-0wj" secondAttribute="bottom" constant="5" id="kOw-Yt-gTV"/>
-                            <constraint firstItem="YR0-Qo-UwA" firstAttribute="top" secondItem="0mi-oz-Hxn" secondAttribute="bottom" constant="5" id="p6W-8U-z4k"/>
+                            <constraint firstItem="piZ-O2-UI4" firstAttribute="leading" secondItem="vLl-Dn-R5g" secondAttribute="leading" constant="40" id="3w1-mV-u7h"/>
+                            <constraint firstAttribute="trailing" secondItem="0mi-oz-Hxn" secondAttribute="trailing" constant="5" id="9A9-l2-OLH"/>
+                            <constraint firstItem="0mi-oz-Hxn" firstAttribute="leading" secondItem="piZ-O2-UI4" secondAttribute="trailing" constant="10" id="M2p-dh-hwf"/>
+                            <constraint firstItem="4O7-wi-GRA" firstAttribute="leading" secondItem="0mi-oz-Hxn" secondAttribute="leading" id="QeJ-g9-g9i"/>
+                            <constraint firstItem="4O7-wi-GRA" firstAttribute="top" secondItem="OGv-br-0wj" secondAttribute="bottom" constant="5" id="aaM-Zo-BE2"/>
+                            <constraint firstItem="YR0-Qo-UwA" firstAttribute="leading" secondItem="OGv-br-0wj" secondAttribute="trailing" constant="10" id="bKB-I6-vfV"/>
+                            <constraint firstItem="OGv-br-0wj" firstAttribute="leading" secondItem="0mi-oz-Hxn" secondAttribute="leading" id="eWx-nM-VY8"/>
+                            <constraint firstItem="0mi-oz-Hxn" firstAttribute="top" secondItem="vLl-Dn-R5g" secondAttribute="top" constant="16" id="fHc-N0-ojQ"/>
+                            <constraint firstAttribute="trailing" secondItem="YR0-Qo-UwA" secondAttribute="trailing" constant="16" id="fgb-ZX-3LI"/>
+                            <constraint firstItem="YR0-Qo-UwA" firstAttribute="top" secondItem="OGv-br-0wj" secondAttribute="top" id="mxE-Ux-YoZ"/>
+                            <constraint firstItem="piZ-O2-UI4" firstAttribute="top" secondItem="vLl-Dn-R5g" secondAttribute="top" constant="16" id="qgK-b1-yxR"/>
+                            <constraint firstItem="OGv-br-0wj" firstAttribute="top" secondItem="0mi-oz-Hxn" secondAttribute="bottom" constant="5" id="wn1-aE-V6s"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="cgw-Il-63Q"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="vLl-Dn-R5g" secondAttribute="bottom" id="K47-GO-uTK"/>
-                <constraint firstAttribute="trailing" secondItem="vLl-Dn-R5g" secondAttribute="trailing" id="hao-ys-eig"/>
-                <constraint firstItem="vLl-Dn-R5g" firstAttribute="leading" secondItem="Plt-ez-mrg" secondAttribute="leading" id="ld3-f4-gss"/>
-                <constraint firstItem="vLl-Dn-R5g" firstAttribute="top" secondItem="Plt-ez-mrg" secondAttribute="top" id="ou4-g7-teZ"/>
+                <constraint firstItem="vLl-Dn-R5g" firstAttribute="top" secondItem="Plt-ez-mrg" secondAttribute="top" id="8Hp-Dw-diK"/>
+                <constraint firstAttribute="bottom" secondItem="vLl-Dn-R5g" secondAttribute="bottom" id="O30-yB-fjZ"/>
+                <constraint firstAttribute="trailing" secondItem="vLl-Dn-R5g" secondAttribute="trailing" id="Zqo-9G-o0G"/>
+                <constraint firstItem="vLl-Dn-R5g" firstAttribute="leading" secondItem="Plt-ez-mrg" secondAttribute="leading" id="rIk-WP-cAh"/>
             </constraints>
-            <size key="customSize" width="406" height="102"/>
+            <size key="customSize" width="446" height="261"/>
             <connections>
                 <outlet property="backView" destination="vLl-Dn-R5g" id="TTo-QH-2OU"/>
                 <outlet property="commentButton" destination="4O7-wi-GRA" id="MCo-yt-1O6"/>
@@ -137,7 +135,7 @@
                 <outlet property="profileImageView" destination="piZ-O2-UI4" id="lqh-WF-p0j"/>
                 <outlet property="timeLabel" destination="icP-76-zIA" id="Hc2-fG-HKq"/>
             </connections>
-            <point key="canvasLocation" x="374" y="-173"/>
+            <point key="canvasLocation" x="508.39694656488547" y="478.52112676056339"/>
         </collectionViewCell>
     </objects>
     <resources>
