--- a/HighSchoolFish/View/CommentHeaderReusableView.xib
+++ b/HighSchoolFish/View/CommentHeaderReusableView.xib
@@ -13,11 +13,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CommentHeader" id="U6b-Vx-4bR" customClass="CommentHeaderReusableView" customModule="HighSchoolFish" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="359" height="141"/>
+            <rect key="frame" x="0.0" y="0.0" width="359" height="229"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Fd-Hf-FXx">
-                    <rect key="frame" x="0.0" y="0.0" width="359" height="141"/>
+                    <rect key="frame" x="0.0" y="0.0" width="359" height="229"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hM6-tR-vwb">
                             <rect key="frame" x="16" y="16" width="30" height="30"/>
@@ -26,7 +26,7 @@
                                 <constraint firstAttribute="width" secondItem="hM6-tR-vwb" secondAttribute="height" multiplier="1:1" id="LN8-TN-SeW"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국회는 헌법개정안이 공고된 날로부터 60일 이내에 의결하여야 하며, 국회의 의결은 블라블라블라블라" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3u-Qs-H4n">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국회는 헌법개정안이 공고된 날로부터 60일 이내에 의결하여야 하며, 국회의 의결은 블라블라블라블라" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3u-Qs-H4n">
                             <rect key="frame" x="56" y="35.333333333333343" width="257" height="46.666666666666657"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <nil key="textColor"/>
@@ -140,16 +140,17 @@
                         <constraint firstItem="FIN-ev-q3M" firstAttribute="top" secondItem="MWS-Rg-6HF" secondAttribute="bottom" constant="5" id="3mo-M8-op4"/>
                         <constraint firstItem="QIR-bY-rLL" firstAttribute="top" secondItem="6Fd-Hf-FXx" secondAttribute="top" constant="16" id="4r5-Bo-bUM"/>
                         <constraint firstItem="hM6-tR-vwb" firstAttribute="leading" secondItem="6Fd-Hf-FXx" secondAttribute="leading" constant="16" id="5Yh-lF-Y0W"/>
+                        <constraint firstItem="MWS-Rg-6HF" firstAttribute="leading" secondItem="QIR-bY-rLL" secondAttribute="leading" id="7wl-v6-Jgk"/>
                         <constraint firstItem="hM6-tR-vwb" firstAttribute="top" secondItem="6Fd-Hf-FXx" secondAttribute="top" constant="16" id="CZa-ul-KaY"/>
                         <constraint firstItem="QIR-bY-rLL" firstAttribute="leading" secondItem="hM6-tR-vwb" secondAttribute="trailing" constant="10" id="EDZ-dE-Ttu"/>
                         <constraint firstAttribute="trailing" secondItem="IOa-0e-9B5" secondAttribute="trailing" constant="16" id="JTo-oB-k7P"/>
                         <constraint firstItem="FIN-ev-q3M" firstAttribute="leading" secondItem="MWS-Rg-6HF" secondAttribute="leading" id="Klb-bl-MCh"/>
                         <constraint firstAttribute="trailing" secondItem="QIR-bY-rLL" secondAttribute="trailing" constant="16" id="LjT-X7-2b4"/>
+                        <constraint firstItem="IOa-0e-9B5" firstAttribute="leading" secondItem="c3u-Qs-H4n" secondAttribute="trailing" id="Pyp-uI-6yy"/>
                         <constraint firstItem="MWS-Rg-6HF" firstAttribute="top" secondItem="c3u-Qs-H4n" secondAttribute="bottom" constant="5" id="U8k-jO-7cj"/>
                         <constraint firstItem="MWS-Rg-6HF" firstAttribute="leading" secondItem="c3u-Qs-H4n" secondAttribute="leading" id="Xgi-P4-cYP"/>
                         <constraint firstItem="c3u-Qs-H4n" firstAttribute="leading" secondItem="QIR-bY-rLL" secondAttribute="leading" id="k3W-fk-5Oy"/>
                         <constraint firstItem="c3u-Qs-H4n" firstAttribute="trailing" secondItem="FIN-ev-q3M" secondAttribute="trailing" id="nBU-N2-gDt"/>
-                        <constraint firstItem="IOa-0e-9B5" firstAttribute="leading" secondItem="c3u-Qs-H4n" secondAttribute="trailing" id="tS3-Dm-3PO"/>
                         <constraint firstItem="c3u-Qs-H4n" firstAttribute="top" secondItem="QIR-bY-rLL" secondAttribute="bottom" constant="5" id="vm3-lR-8h7"/>
                         <constraint firstItem="IOa-0e-9B5" firstAttribute="top" secondItem="QIR-bY-rLL" secondAttribute="bottom" constant="5" id="y2I-fW-m4G"/>
                     </constraints>
@@ -157,7 +158,7 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
             <constraints>
-                <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="6Fd-Hf-FXx" secondAttribute="trailing" id="JLr-8j-1b3"/>
+                <constraint firstAttribute="trailing" secondItem="6Fd-Hf-FXx" secondAttribute="trailing" id="QNp-6n-Nlr"/>
                 <constraint firstItem="6Fd-Hf-FXx" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="VdM-WI-RUl"/>
                 <constraint firstAttribute="bottom" secondItem="6Fd-Hf-FXx" secondAttribute="bottom" id="g9k-ja-2tz"/>
                 <constraint firstItem="6Fd-Hf-FXx" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="h6B-Go-Brm"/>
@@ -174,7 +175,7 @@
                 <outlet property="showMoreView" destination="FIN-ev-q3M" id="9Ed-nh-91Q"/>
                 <outlet property="timeLabel" destination="FLO-01-XJK" id="rc4-1l-fXw"/>
             </connections>
-            <point key="canvasLocation" x="211.4503816793893" y="25.704225352112676"/>
+            <point key="canvasLocation" x="211.4503816793893" y="56.690140845070424"/>
         </collectionReusableView>
     </objects>
     <resources>
